--- a/Otomat/Otomat/Otomat.vcxproj
+++ b/Otomat/Otomat/Otomat.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Otomat.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Otomat.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
